--- a/app/views/admin/announcements/edit.html.erb
+++ b/app/views/admin/announcements/edit.html.erb
@@ -1,5 +1,14 @@
 <%= title "Edit Announcement" %>
 
+<span class="right admin">
+  <%= link_to 'All Announcements', admin_announcements_path %>
+  | <%= link_to 'Add New', new_admin_announcement_path %>
+</span>
+
+<div class="clearfix"></div>
+
+<br />
+
 <% form_assistant_for [:admin, @announcement] do |form| %>
   <%= form.partial 'form' %>
   <p class="submission">
