--- a/app/views/admin/menu_categories/index.html.erb
+++ b/app/views/admin/menu_categories/index.html.erb
@@ -1,7 +1,13 @@
 <%= title "Menu Categories" %>
 
-<%= link_to 'Reorder Categories', sortable_admin_menu_categories_path %>
-| <%= link_to 'New', new_admin_menu_category_path %>
+<span class="right admin">
+  <%= link_to 'Reorder Categories', sortable_admin_menu_categories_path %>
+  | <%= link_to 'New', new_admin_menu_category_path %>
+</span>
+
+<div class="clearfix"></div>
+
+<br />
 
 <% unless @menu_categories.blank? %>
   <% list do %>
@@ -9,8 +15,8 @@
       <li class="<%= cycle 'odd', nil %>">
         <span class="options">
           <%= link_to 'Edit', edit_admin_menu_category_path(cat) %>
-          | <%= link_to 'Delete', admin_menu_category_path(cat), :method => :delete %>
           | <%= link_to 'Reorder Items', sortable_admin_menu_items_path(:category => cat.id) %>
+          | <%= link_to 'Delete', admin_menu_category_path(cat), :method => :delete %>
         </span>
         <%= cat.name %>
       </li>
