--- a/app/views/admin/menu_categories/new.html.erb
+++ b/app/views/admin/menu_categories/new.html.erb
@@ -1,5 +1,13 @@
 <%= title "New Menu Category" %>
 
+<span class="right admin">
+  <%= link_to 'All Categories', admin_menu_categories_path %>
+</span>
+
+<div class="clearfix"></div>
+
+<br />
+
 <% form_assistant_for [:admin, @menu_category] do |form| %>
   <%= form.partial 'form' %>
   <p class="submission">
