--- a/app/views/admin/menu_items/new.html.erb
+++ b/app/views/admin/menu_items/new.html.erb
@@ -1,5 +1,13 @@
 <%= title "New Menu Item" %>
 
+<span class="right admin">
+  <%= link_to 'All Items', admin_menu_items_path %>
+</span>
+
+<div class="clearfix"></div>
+
+<br />
+
 <% form_assistant_for [:admin, @menu_item] do |form| %>
   <%= form.partial 'form' %>
   <p class="submission">
