--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -1,2 +1,15 @@
-<h1>Admin::Users#edit</h1>
-<p>Find me in app/views/admin/users/edit.html.erb</p>
+<%= title "Edit User" %>
+
+<span class="right admin">
+  <%= link_to 'All Users', admin_users_path %>
+  | <%= link_to 'Add New', new_admin_user_path %>
+</span>
+
+<div class="clearfix"></div>
+
+<% form_assistant_for [:admin, @user] do |form| %>
+  <%= form.partial 'form' %>
+  <p class="submission">
+    <%= form.submit "Update User" %>
+  </p>
+<% end %>
