--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -147,10 +147,15 @@ body, html {
 h1.title {
   font-family: Georgia, Palatino, 'Palatino Linotype', Times, 'Times New Roman', serif;
   font-size: 35px;
+  font-weight: normal;
   padding-bottom: 27px;
   margin-bottom: 20px;
   color: #f1f1f1;
   text-shadow: 2px 2px 2px #000;
+}
+h1 {
+  font-weight: bold;
+  margin-bottom: 10px;
 }
 h2.sub-title {
   font-size: 18px;
@@ -253,6 +258,35 @@ p.soft {
   font-size: 14px;
   font-family: helvetica, arial;
   color: #666;
+}
+ul.soft {
+  color: #666;
+}
+ul.admin a {
+  font-weight: bold;
+}
+ul.admin li {
+  background: url(../images/blue-arrow-right.png) no-repeat left top;
+  padding-left: 30px;
+}
+span.admin,
+span.options {
+  color: #aaa;
+  font-size: 14px;
+}
+span.admin {
+  font-size: 12px;
+  font-weight: bold;
+}
+ul.list li {
+  padding: 7px 5px;
+  color: #444;
+}
+li.odd {
+  background: #f1f1f1;
+  border-radius: 4px;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
 }
 #sidebar h3 {
   font-size: 14px;
@@ -365,6 +399,7 @@ ul.sortable li {
   line-height: 140%;
   font-size: 13px;
   background: url(../images/menu-dot.png) repeat-x left 10px;
+  padding: 0;
 }
 #menu h2 {
   font-size: 17px;
