--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -301,6 +301,7 @@ li.odd {
   margin: 7px 0 0 5px;
 }
 #sidebar ul.list li {
+  padding: 0;
   padding-left: 23px;
   background: url(../images/page.png) no-repeat left 2px;
 }
