--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -57,14 +57,13 @@ body, html {
   position: absolute;
   top: 70px;
   right: 0;
-  width: 325px;
+  width: 375px;
 }
 #hdr #testimonial p {
   color: #888;
   font-size: 13px;
   line-height: 125%;
   letter-spacing: 1px;
-  font-style: italic;
 }
 #hdr #testimonial span {
   display: block;
@@ -309,7 +308,6 @@ li.odd {
   font-family: georgia, times;
   color: #777;
   font-size: 14px;
-  font-style: italic;
   letter-spacing: 1px;
   display: block;
   padding-bottom: 4px;
@@ -336,6 +334,10 @@ input.text {
   padding: 5px;
   font-size: 16px;
   width: 75%;
+}
+textarea {
+  width: 97%;
+  height: 400px;
 }
 table.inline {
   width: 100%;
