updated menu with togo orders

--- a/app/views/menu/index.html.erb
+++ b/app/views/menu/index.html.erb
@@ -17,5 +17,7 @@
     <% else %>
       <p>Sorry, we haven't updated our online menu yet!</p>
     <% end %>
+    <br />
+    <p class="soft" style="text-align:center">All To-Go Orders add $0.50</p>
   </div>
 </div>
