ritzy changes based on feedback

--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -24,7 +24,7 @@
   <br />
   
   <p class="tright">
-    <%= link_to "View All of Ritzy's Photos &#187;", 
-      "http://www.flickr.com/photos/49421777@N07/", :rel => 'external' %>
+    <%= link_to "View More Historical Photos &#187;", 
+      "http://www.flickr.com/photos/49421777@N07/tags/about/", :rel => 'external' %>
   </p>
 </div>
