--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -40,7 +40,7 @@
   <br />
   
   <p class="tright">
-    <%= link_to "View All of Ritzy's Photos &#187;", 
-      "http://www.flickr.com/photos/49421777@N07/", :rel => 'external' %>
+    <%= link_to "View More Bike Night Photos &#187;", 
+      "http://www.flickr.com/photos/49421777@N07/tags/bikenight/", :rel => 'external' %>
   </p>
 </div>
