removed saturday from hours

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,7 +52,7 @@
 	          
 	          <div class="hours rounded">
 	            <p><strong>Monday - Friday</strong> 5am - 5pm</p>
-	            <p><strong>Saturday</strong> 7am - 2pm</p>
+	            <!-- <p><strong>Saturday</strong> 7am - 2pm</p> -->
 	            <p><strong>Bike Night</strong> 5pm - 9pm</p>
 	            <p class="soft small">
 	              Note: Thursday Bike Night's are only during the summer
