can now manage links via admin

--- a/app/views/admin/base/index.html.erb
+++ b/app/views/admin/base/index.html.erb
@@ -16,6 +16,13 @@
     </p>
   </li>
   <li>
+    <%= link_to 'Links', admin_links_path %>
+    | <%= link_to 'New', new_admin_link_path %>
+    <p class="soft">
+      Links are listed in the press area. Here is where you can manage them.
+    </p>
+  </li>
+  <li>
     <%= link_to 'Testimonials', admin_testimonials_path %>
     | <%= link_to 'New', new_admin_testimonial_path %>
     <p class="soft">
