email subscriber support, with ability to send out announcements in the admin

--- a/app/views/admin/base/index.html.erb
+++ b/app/views/admin/base/index.html.erb
@@ -56,6 +56,14 @@
       you could announce that here.
     </p>
   </li>
+  <li>
+    <%= link_to 'Email Subscribers', admin_subscribers_path %>
+    | <%= link_to 'Send an Email', new_admin_email_path %>
+    <p class="soft">
+      This is where you can manage email subscribers and send announcements
+      out to those who have already subscribed.
+    </p>
+  </li>
 </ul>
 
 <div class="divider"></div>
